# choir-binder-manager

./: .gitignore  Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs  models.rs  ui.rs
src/db/: binders.rs  connection.rs  mod.rs  songs.rs
src/ui/: app.rs  forms.rs  helpers.rs  mod.rs  screens.rs  terminal.rs
