[package]
name = "choir-binder-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.27"
directories = "5"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "1"
open = "5"
