[package]
name = "choir-binder-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0.17"
open = "5"
